--- a/docs/interni/verbali/2023_05_15_I/2023_05_15_I.tex
+++ b/docs/interni/verbali/2023_05_15_I/2023_05_15_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 15/05/2023}
 \setredattori{Soldà Matteo}
-\setrevisori{}
+\setrevisori{Salami Lorenzo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 15/05/2023
@@ -19,7 +19,7 @@
 
 \section*{Informazioni Generali}
 \begin{itemize}
-    \item Data e Ora: 08/05/2023 15:30
+    \item Data e Ora: 15/05/2023 15:30
     \item Durata: 1h
     \item Piattaforma: Discord
     \item Partecipanti
