Effettuata la revisione del verbale; corretti alcuni typo

--- a/docs/esterni/verbali/2023_05_17_E/2023_05_17_E.tex
+++ b/docs/esterni/verbali/2023_05_17_E/2023_05_17_E.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 17/05/2023 con Imola Informatica}
 \setredattori{Brotto Romina}
-\setrevisori{ \\ }
+\setrevisori{Alberti Nicolas}
 \setdestuso{esterno}
 \setdescrizione{
     Verbale dell'incontro del 17/05/2023 con Imola Informatica
@@ -33,12 +33,12 @@
 \end{itemize}
 \section*{O.D.G}
 \begin{itemize}
-    \item Domande riguadanti i casi d'uso;
+    \item Domande riguardanti i casi d'uso;
     \item Domande sull'Analisi dei Requisiti;
     \item Varie ed Eventuali.
 \end{itemize}
 \section*{Conclusioni}
-L'azienda ha provveduto a rispondere ad alcune domande riaguardanti i casi d'uso finora presi in esame.
+L'azienda ha provveduto a rispondere ad alcune domande riguardanti i casi d'uso finora presi in esame.
 Tali domande riguardavano principalmente:
 \begin{itemize}
     \item la tipologia di utenti che si interfacceranno con la web app;
