Aggiunta sezione G. ed aggiunta la parola branch

--- a/docs/esterni/glossario/glossario.tex
+++ b/docs/esterni/glossario/glossario.tex
@@ -15,7 +15,9 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 }
 \addversione{0.0.0}{24/03/2023}{Soldà Matteo}{Cavaliere Erica}{Prima stesura.}
 \addversione{0.0.1}{03/05/2023}{Nicolas Alberti}{Soldà Matteo}{Aggiunta parole al glossario, lettera T.}
-\addversione{0.0.2}{10/05/2023}{Soldà Matteo}{}{Aggiunti nuovi vocaboli derivanti da \textit{Motivazione delle Scelte}}
+\addversione{0.0.2}{10/05/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunti nuovi
+vocaboli derivanti da \textit{Motivazione delle Scelte} e anche da \textit{Norme
+di Progetto}}
 
 
 \begin{document}
@@ -27,7 +29,10 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \makecontentsdetails{Glossario}
 
 \section{B.}
-\textbf{Blocco di Codice:} gruppo di istruzioni che devono essere eseguite in ordine. \\ \\
+\textbf{Blocco di Codice:} gruppo di istruzioni che devono essere eseguite in ordine. \\ 
+\textbf{Branch:} in \textit{GitHub\textsubscript{G}} è un ambiente isolato della
+\textit{repository\textsubscript{G}} che permette di duplicare il codice
+sorgente e modificarne alcune parti, apportando modifiche che non intaccano il codice principale del progetto. \\ \\
 
 \newpage
 \section{D.}
@@ -38,7 +43,19 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \textbf{Fornitura:} ciascuna delle serie di prodotti necessari al completamento, al funzionamento o all'efficienza di qualcosa. \\ \\
 \textbf{Full-stack:} insieme di un sistema o di applicazione informatica, comprendente sia il frontend che il backend.\\ \\
 
+\section{G.}
+\textbf{Git:} sistema di controllo di versione distribuito, focalizzato
+sull'agevolare il coordinamento dello sviluppo di codice tra più persone. \\ \\
+\textbf{GitHub:} servizio di hosting per progetti software per
+\textit{repository\textsubscript{G}} \textit{Git\textsubscript{G}}. Permette di
+utilizzare software aggiuntivi per la collaborazione, quali:
+\begin{itemize}
+    \item sistema di \textit{ticketing\textsubscript{G}};
+    \item sistema per la gestione delle attività di progetto;
+    \item sistema per l'integraziopne continua.
+\end{itemize} 
 \newpage
+
 \section{I.}
 \textbf{IoT}: \textit{Internet of Things}, descrive la rete di oggetti fisici che hanno sensori, software e altre tecnologie integrate allo scopo di connettere e scambiare dati con altri dispositivi e sistemi tramite internet. \\ \\
 \textbf{Implementazione:} realizzazione concreta di una procedura a partire dalla sua definizione logica. \\ \\
@@ -53,6 +70,11 @@ Questo documento riporta i termini specifici del dominio per i quali viene richi
 \textbf{Piano di Progetto:} calendario di massima di un progetto riportante la stima dei costi di realizzazione, dei rischi attesi e della loro mitigazione e infine della suddivisione del lavoro in molteplici periodi successivi. Per ogni periodo devono essere riportati i seguenti elementi: obiettivi attesi, obiettivi raggiunti, rischi occorsi, conseguenze e mitigazione, costi osservati e aggiornamento del calendario futuro e della stima dei costi finali. \\ \\
 \textbf{Piano di Qualifica:} specifica gli obiettivi quantitativi di qualità di prodotto e di processo, oltre a misurare il raggiungimento di tali obiettivi allo stato corrente pone le fondamenta per retrospettive e iniziative di auto-miglioramento. \\ \\
 \textbf{Processo:} insieme di attività correlate e coese che trasformano bisogni (input) in prodotti (output) secondo regole date, utilizzando risorse nel farlo. \\ \\
+
+\section{R.}
+\textbf{Repository:} è una cartella remota che permette il salvataggio dei file
+di progetto ed utilizza un sistema di controllo di versione. Quando
+viene nominato, ci si riferisce al repository \textit{GitHub\textsubscript{G}} reperibile all’indirizzo \texttt{https://github.com/4ourSquared/LumosMinima}.  \\ \\
 
 \newpage
 \section{T.}
