--- a/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
+++ b/docs/interni/Norme_di_Progetto/norme_di_progetto.tex
@@ -312,8 +312,8 @@ Per quanto riguarda la scrittura del codice, si è scelto di utilizzare le segue
 
 Ogni modifica alla repository dovrà seguire i seguenti passaggi:
 \begin{itemize}
-\item Modifica del codice su repository locale;
-\item Push su un branch remoto;
+\item Modifica del codice su \textit{repository\textsubscript{G}} locale;
+\item Push su un \textit{branch\textsubscript{G}} remoto;
 \item Pull request tramite piattaforma web GitHub per merge sul branch \texttt{main};
 \item Review della pull request;
 \item Merge sul branch \texttt{main}.
