--- a/docs/esterni/motivazione_scelte/motivazione_scelte.tex
+++ b/docs/esterni/motivazione_scelte/motivazione_scelte.tex
@@ -15,7 +15,7 @@ Questo documento riporta i confronti tra i vari linguaggi presi in considerazion
 }
 
 \addversione{0.0.0}{09/05/2023}{Soldà Matteo}{Ceccato Francesco}{Prima stesura.}
-\addversione{0.0.1}{18/05/2023}{Soldà Matteo}{}{Aggiunta decisione preliminare dei linguaggi e framework}
+\addversione{0.0.1}{18/05/2023}{Soldà Matteo}{Alberti Nicolas}{Aggiunta decisione preliminare dei linguaggi e framework}
 
 
 \begin{document}
