Aggiunto Verificatore verbale 2023_05_22_I.tex

--- a/docs/interni/verbali/2023_05_22_I/2023_05_22_I.tex
+++ b/docs/interni/verbali/2023_05_22_I/2023_05_22_I.tex
@@ -7,7 +7,7 @@
 
 \settitolo{Verbale del 22/05/2023}
 \setredattori{Alberti Nicolas}
-\setrevisori{}
+\setrevisori{Soldà Matteo}
 \setdestuso{interno}
 \setdescrizione{
     Verbale dell'incontro del 22/05/2023
