--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -58,7 +58,7 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
     \item Way of Working\newline
     \includegraphics[scale=0.24]{WoW_2.png}\newline
     \item Requirements and Technology Baseline\newline
-    \includegraphics[scale=0.24]{RTB_3.png}\newline
+    \includegraphics[scale=0.24]{RTB_4.png}\newline
 \end{itemize}
 
 \subsection{Scrum}\label{Scrum}
@@ -182,31 +182,69 @@ Durante lo svolgimento del progetto, è possibile andare incontro a dei problemi
 \textbf{Suddivisione del lavoro:}
 \begin{itemize}
     \item incontro con il proponente per sistemare gli use case;
+    \item inizio della stesura del \textit{Proof of Concept};
     \item decidere i linguaggi e i framework da utilizzare.
 \end{itemize}
 \textbf{Difficoltà incontrate:}
 \begin{itemize}
-    \item (da definire)
+    \item difficoltà nella decisione dei linguaggi da utilizzare, in quanto
+    ciascun membro del gruppo ha espresso preferenze ed opinioni diverse;
+    \item difficoltà nell'interpretazione di alcuni Use Case, in particolare
+    nella definizione dei ruoli degli attori.
 \end{itemize}
-\includegraphics[scale=0.24]{RTB_3.png}\newline
+\includegraphics[scale=0.24]{RTB_4.png}\newline
 \newline
 \begin{tabular}{|c|c|c|c|c|c|c|c|}
     \hline
     \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
     \hline
-    Erica & & 0 & & & & & 0(+0)\\
+    Erica & & 1 & & & & & 6(+1)\\
+    \hline
+    Francesco & & & & & & 1 & 6(+1)\\
+    \hline
+    Lorenzo & & 1 & & & & & 6(+1)\\
+    \hline
+    Matteo & & & 2 & & & & 9(+2)\\
+    \hline
+    Nicolas & & & 2 & & & & 7.30(+1)\\
+    \hline
+    Romina & 1 & & & & & & 7(+2)\\
+    \hline
+    \textbf{Totale} & 8(+1) & 13.30(+2) & 14(+4) & 0(+0) & 0(+0) & 6(+1) & 41.30(+8)\\
+    \hline
+\end{tabular}\\[8pt]
+
+\subsubsection{Sprint 5}
+\textbf{Data di inizio:} 26/05/2023\newline
+\textbf{Data di fine:} 02/06/2023\newline
+\newline
+\textbf{Suddivisione del lavoro:}
+\begin{itemize}
+    \item (da definire)
+\end{itemize}
+\textbf{Difficoltà incontrate:}
+\begin{itemize}
+    \item (da definire)
+\end{itemize}
+\includegraphics[scale=0.24]{RTB_4.png}\newline
+\newline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+    \hline
+    \textbf{ORE} & \textbf{Respon.} & \textbf{Amministr.} & \textbf{Analista} & \textbf{Proget.} & \textbf{Program.} & \textbf{Verif.} & \textbf{Totale}\\
+    \hline
+    Erica & & & 0 & & & & 0(+0)\\
     \hline
     Francesco & & & & & & 0 & 0(+0)\\
     \hline
-    Lorenzo & & 0 & & & & & 0(+0)\\
+    Lorenzo & 0 & & & & & & 0(+0)\\
     \hline
-    Matteo & & & 0 & & & & 0(+0)\\
+    Matteo & & & & & 0 & & 0(+0)\\
     \hline
-    Nicolas & & & 0 & & & & 0(+0)\\
+    Nicolas & & 0 & & & & & 0(+0)\\
     \hline
-    Romina & 0 & & & & & & 0(+0)\\
+    Romina & & & 0 & & & & 0(+0)\\
     \hline
-    \textbf{Totale} & 0(+0) & 0(+) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
+    \textbf{Totale} & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0) & 0(+0)\\
     \hline
 \end{tabular}\\[8pt]
 
